kubernetes/apps/cloudbeaver/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbeaver
  labels:
    name: cloudbeaver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
      - name: cloudbeaver
        image: dbeaver/cloudbeaver:latest
        ports:
        - containerPort: 8978
        volumeMounts:
        - name: cloudbeaver-data
          mountPath: /opt/cloudbeaver/data
      volumes:
      - name: cloudbeaver-data
        persistentVolumeClaim:
          claimName: cloudbeaver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver-svc
  namespace: cloudbeaver
spec:
  ports:
  - port: 80
    targetPort: 8978
  selector:
    app: cloudbeaver
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudbeaver-ingress
  namespace: cloudbeaver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: cloudbeaver.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudbeaver-svc
            port:
              number: 80
